[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-budget-tracker"
version = "0.1.0"
description = "Per-run budget tracking for tokens, cost, and API calls"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["ai", "agents", "budget", "tokens", "cost", "tracking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_budget_tracker"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
